--- a/flexbox-basic/index.html
+++ b/flexbox-basic/index.html
@@ -25,6 +25,12 @@
             <div class="element-flex element-3">
                 <h2>Service 3</h2>
             </div>
+            <div class="element-flex element-3">
+                <h2>Service 4</h2>
+            </div>
+            <div class="element-flex element-3">
+                <h2>Service 5</h2>
+            </div>
         </div>
     </div>
     
