--- a/flexbox-basic/index.html
+++ b/flexbox-basic/index.html
@@ -31,6 +31,36 @@
             <div class="element-flex element-3">
                 <h2>Service 5</h2>
             </div>
+            <div class="element-flex element-1">
+                <h2>Service 1</h2>
+            </div>
+            <div class="element-flex element-2">
+                <h2>Service 2</h2>
+            </div>
+            <div class="element-flex element-3">
+                <h2>Service 3</h2>
+            </div>
+            <div class="element-flex element-3">
+                <h2>Service 4</h2>
+            </div>
+            <div class="element-flex element-3">
+                <h2>Service 5</h2>
+            </div>
+            <div class="element-flex element-1">
+                <h2>Service 1</h2>
+            </div>
+            <div class="element-flex element-2">
+                <h2>Service 2</h2>
+            </div>
+            <div class="element-flex element-3">
+                <h2>Service 3</h2>
+            </div>
+            <div class="element-flex element-3">
+                <h2>Service 4</h2>
+            </div>
+            <div class="element-flex element-3">
+                <h2>Service 5</h2>
+            </div>
         </div>
     </div>
     
